# smart-scanner

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/camera/: CameraControls.tsx  CameraPresetSelector.tsx  CameraPreview.tsx  CameraUrlInput.tsx  CaptureHistory.tsx  NetworkScanner.tsx  SaveImageButton.tsx  ScanProgress.tsx
src/components/ui/: Toolbar.tsx  progress.tsx  scroll-area.tsx
src/hooks/: useCamera.ts  useCameraUrl.ts
src/types/: camera.ts
